// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Table/with expandable rows with expandable rows 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <table
      class="BaseTable__StyledTable-sc-10lnp9m-0 kfnyiE"
    >
      <thead>
        <tr
          class="TableHead__StyledHeaderRow-msr3t5-0 eqrvph"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 kfgNsH"
            data-testid="table-head"
            scope="col"
            width="30px"
          />
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Date
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Expected Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Actual Quantity
          </th>
        </tr>
      </thead>
      <tbody
        data-testid="table-body"
      >
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-01
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,025 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,800 eaches
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <button
              aria-label="Expand row"
              class="ControlIcon__StyledButton-sc-1h83lvi-0 cCdEvo"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="Icon-fc7twp-0 efirdb"
                color="currentColor"
                fill="currentColor"
                focusable="false"
                height="32px"
                icon="downArrow"
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </button>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-02
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,250 eaches
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-03
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,425 eaches
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <button
              aria-label="Expand row"
              class="ControlIcon__StyledButton-sc-1h83lvi-0 cCdEvo"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="Icon-fc7twp-0 efirdb"
                color="currentColor"
                fill="currentColor"
                focusable="false"
                height="32px"
                icon="downArrow"
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </button>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-04
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            675 eaches
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-07
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,575 eaches
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <button
              aria-label="Expand row"
              class="ControlIcon__StyledButton-sc-1h83lvi-0 cCdEvo"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="Icon-fc7twp-0 efirdb"
                color="currentColor"
                fill="currentColor"
                focusable="false"
                height="32px"
                icon="downArrow"
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </button>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-22
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,725 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            -
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-23
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            -
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-24
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            -
          </td>
        </tr>
      </tbody>
      <tfoot />
    </table>
  </div>
</div>
`;

exports[`Storyshots Components/Table/with expandable rows with rows expanded by default 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <table
      class="BaseTable__StyledTable-sc-10lnp9m-0 kfnyiE"
    >
      <thead>
        <tr
          class="TableHead__StyledHeaderRow-msr3t5-0 eqrvph"
        >
          <th
            class="StyledTh-sc-10nzyk9-0 kfgNsH"
            data-testid="table-head"
            scope="col"
            width="30px"
          />
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Date
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Expected Quantity
          </th>
          <th
            class="StyledTh-sc-10nzyk9-0 sBlyT"
            data-testid="table-head"
            scope="col"
          >
            Actual Quantity
          </th>
        </tr>
      </thead>
      <tbody
        data-testid="table-body"
      >
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-01
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,025 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,800 eaches
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <button
              aria-label="Expand row"
              class="ControlIcon__StyledButton-sc-1h83lvi-0 cCdEvo"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="Icon-fc7twp-0 efirdb"
                color="currentColor"
                fill="currentColor"
                focusable="false"
                height="32px"
                icon="downArrow"
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </button>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-02
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,250 eaches
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-03
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,425 eaches
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <button
              aria-label="Collapse row"
              class="ControlIcon__StyledButton-sc-1h83lvi-0 cCdEvo"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="Icon-fc7twp-0 efirdb"
                color="currentColor"
                fill="currentColor"
                focusable="false"
                height="32px"
                icon="upArrow"
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                />
              </svg>
            </button>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-04
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            675 eaches
          </td>
        </tr>
        <tr
          data-testid="expanded-table-row"
        >
          <td
            colspan="4"
          >
            <div
              class="Box-xda4ls-0 JzMyz"
            >
              <p
                class="Text-sc-1wu7vpu-0 iHOIzo"
                color="blackBlue"
                font-size="medium"
                font-weight="bold"
              >
                Expands!
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-07
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,575 eaches
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            <button
              aria-label="Collapse row"
              class="ControlIcon__StyledButton-sc-1h83lvi-0 cCdEvo"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="Icon-fc7twp-0 efirdb"
                color="currentColor"
                fill="currentColor"
                focusable="false"
                height="32px"
                icon="upArrow"
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                />
              </svg>
            </button>
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-22
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            1,725 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            -
          </td>
        </tr>
        <tr
          data-testid="expanded-table-row"
        >
          <td
            colspan="4"
          >
            <div
              class="Box-xda4ls-0 JzMyz"
            >
              <p
                class="Text-sc-1wu7vpu-0 iHOIzo"
                color="blackBlue"
                font-size="medium"
                font-weight="bold"
              >
                Expands!
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-23
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            -
          </td>
        </tr>
        <tr
          class="TableBody__StyledTr-sc-1amzhx8-1 jsrSxq"
          data-testid="table-row"
        >
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          />
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2019-10-24
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            2,475 eaches
          </td>
          <td
            class="TableCell__StyledTableCell-sc-1t826om-0 cMUUMq"
          >
            -
          </td>
        </tr>
      </tbody>
      <tfoot />
    </table>
  </div>
</div>
`;
